# twitch-rpg

./: .gitignore  Cargo.toml  README.md
client/: Cargo.toml  Trunk.toml  flake.nix  index.html  tailwind.config.js
client/src/: dungeon_floor.rs  item_shop.rs  main.rs  state.rs  util.rs
client/src/components/: bottom_panel.rs  game_canvas.rs  mod.rs  side_panel.rs
client/src/sprites/: damage_fx_sprites.rs  items_sprites.rs  mod.rs  monster_sprites.rs  monsters_sprites.rs  spellfx_anim_1_sprites.rs  spellfx_anim_2_sprites.rs  spellfx_anim_3_sprites.rs  spellfx_anim_4_sprites.rs  spellfx_anim_5_sprites.rs  spellfx_missiles_sprites.rs  terrain_sprites.rs
common/: Cargo.toml
common/src/: lib.rs  spells.rs
frontend/: Cargo.toml
frontend/src/: main.rs
game/: Cargo.toml
server/: .env  Cargo.toml
server/assets/items/armor/: elven_boots.ron
server/assets/items/consumable/: giant_growth_potion.ron  healing_potion.ron  invisibility_potion.ron
server/assets/items/weapons/: axe_basic.ron  axe_uncommon.ron  composite_bow.ron  dagger_basic.ron  greatsword.ron  longsword.ron  mace.ron  nether_orb_staff.ron  nether_wood_staff.ron  scepter_basic.ron  scepter_gold.ron  scimitar.ron  shield_basic.ron  shortbow.ron  trident.ron  zephyr_bow.ron
server/assets/spells/: curse.ron  enlarge.ron  fireball.ron  heal.ron  invisibility.ron
server/src/: commands.rs  ecs.rs  main.rs  parser.rs  player_class.rs  webserver.rs
server/src/ecs/: assets.rs  components.rs  entities.rs  mod.rs  resources.rs  shop.rs  spells.rs  systems.rs  world.rs
server/src/ecs/components/: class.rs  combat.rs  effect.rs  form.rs  inventory.rs  mod.rs  movement.rs  spells.rs
server/src/ecs/systems/: action_timer.rs  assign_room_target.rs  attack_cooldown.rs  combat.rs  command_handler.rs  countdown.rs  death_handler.rs  dungeon_complete.rs  effect_expiration.rs  enemy_ai.rs  group_coordination.rs  item_pickup.rs  level_up.rs  mod.rs  movement.rs  movement_validation.rs  party_wipe.rs  pathfinding.rs  player_ai.rs  player_pathfinding.rs  player_spacing.rs  player_spell_ai.rs  projectile_cleanup.rs  random_wander.rs  rendering.rs  room_exploration.rs  shop_population.rs  shop_purchasing.rs  spell_cooldown.rs  spellcasting.rs  stat_aggregation.rs  stat_change.rs  weapon_classification.rs
twitch-rpg-irc/: Cargo.toml
twitch-rpg-irc/src/: commands.rs  main.rs  parser.rs
