[package]
name = "twitch-rpg-client"
version = "0.1.0"
edition = "2024"

[dependencies]
leptos = { version = "0.8.2", features = ["csr"]}
console_error_panic_hook = "0.1.7"
web-sys = {version = "0.3.77", features = ["Window", "CanvasRenderingContext2d", "CanvasGradient", "EventSource"] }
wasm-bindgen = "0.2.100"
serde_json = "1.0.140"
phf = { version = "0.12.1", features = ["macros"] }
common = { package = "twitch-rpg-common", path = "../common"}



[[bin]]
name = "gen_sprites"
path = "src/bin/gen_sprites.rs"