[package]
name = "twitch-rpg-server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
axum = "0.8.4"
dotenv = "0.15.0"
mime_guess = "2.0.5"
pathfinding = "4.14.0"
rand = "0.9.1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
rust-embed = "8.7.2"
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.140"
specs = "0.20.0"
specs-derive = "0.4.1"
tatami-dungeon = "0.1.7" # dungeon generation
tokio = { version = "1.45.1", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["full"] }
tower-http = { version = "0.6.4", features = ["cors"] }
tmi = "0.9.0"
winnow = "0.7.11"
openssl = { version = "0.10", features = ["vendored"] }

common = { package = "twitch-rpg-common", path = "../common"}


